# apeiria_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  apeiria.config.example.toml  bot.py  docker-compose.yml  main.py  pyproject.toml  user_bot.example.py
.github/workflows/: quality.yml
alembic/: env.py
alembic/versions/: 3f975f0a34e2_initial.py  6695f302d207_add_apeiria_settings_table.py
apeiria/: _framework_loader.py  _user_loader.py  bootstrap.py  exceptions.py  log.py  scheduler.py
apeiria/access/: __init__.py  audit.py  audit_service.py  context.py  control.py  groups.py  groups_repository.py  hook.py  level.py  management.py  models.py  permission.py  permission_rules.py  policy.py  principal.py  principal_roles.py  principal_service.py  repository.py  rules.py  service.py
apeiria/ai/: __init__.py  config.py  contributions.py  diagnostics.py  plugin_api.py  retention.py  runtime_settings.py  service.py  token_usage.py  trace_broker.py  turn_records.py  types.py
apeiria/app/: __init__.py
apeiria/bootstrap/: plan.py  steps.py
apeiria/bot/: entry.py  event_context.py  feedback.py  guard.py  ingest.py  live_context.py  normalization.py  platform.py  rules.py  superuser.py
apeiria/builtin_plugins/: ai.py
apeiria/chat/: __init__.py  adapter.py  alconna.py  bot.py  connection.py  emitter.py  gateway.py  gateway_protocol.py  message_handler.py  protocol.py  service.py  state.py  transport.py
apeiria/cli/: __init__.py  actions.py  context.py  i18n.py  init_cmd.py  main.py  nb.py  output.py  reset_password_cmd.py  run_cmd.py  support.py
apeiria/config/: __init__.py  adapters.py  bot_config.py  contract.py  drivers.py  loader.py  models.py  mutator.py  normalizers.py  package_config.py  plugins.py  project.py  project_sections.py  reflector.py  schema.py  webui_config.py
apeiria/conversation/: __init__.py  context.py  contracts.py  identity.py  ingest.py  models.py  normalization.py  repository.py  service.py  store.py  summary.py
apeiria/db/: __init__.py  base.py  engine.py  inspection.py  runtime.py  schema.py  schema_constants.py
apeiria/env/: ensure.py  inject.py  sync.py
apeiria/environment/: __init__.py  compatibility.py  dashboard.py  extension_project.py  frontend_build.py  health.py  manager.py  models.py  package_mutation.py  package_progress.py
apeiria/i18n/: __init__.py
apeiria/plugin/: adapter_manager.py  adapter_resolver.py  adapter_scanner.py  dependency_graph.py  manager.py  scanner.py
apeiria/plugins/: __init__.py  adapter_selection.py  catalog.py  catalog_state.py  config_bootstrap.py  install.py  install_resolution.py  management.py  models.py  package_ids.py  policy.py  protection.py  readme.py  registry.py  repository.py  settings.py  settings_capabilities.py  settings_cleanup.py  settings_support.py  settings_view.py  state.py  state_cleanup.py  toggle.py  uninstall.py
apeiria/runtime/: __init__.py  bootstrapper.py  compatibility.py  context.py  control_plane.py  entries.py  entry_guard.py  package_map.py
apeiria/shared/: group_state.py  plugin_introspection.py  principal.py  principal_roles.py  principal_service.py
apeiria/system/: __init__.py  management.py  project_update.py
apeiria/utils/: command_prefix.py  files.py  group_state.py  json_utils.py  plugin_introspection.py  project_context.py  render.py  restart.py  session.py  statistics.py  superuser.py  time_format.py
apeiria/web/: auth.py  auth_password.py  logs.py  plugin_metadata.py  pypi.py  routes.py  store.py  tasks.py  update.py
apeiria/webchat/: __init__.py  adapter.py  alconna.py  assets.py  bot.py  codec.py  config.py  connection.py  emitter.py  event.py  gateway.py  gateway_protocol.py  message.py  message_handler.py  protocol.py  service.py  session.py  state.py  store.py  transport.py  uninfo.py
apeiria/webui/: admin_init.py  admin_registry.py  admin_service.py  auth.py  csrf_middleware.py  frontend_build.py  login_guard.py  plugin_routers.py  roles.py
docs/: agent-quickstart.md  architecture-map.md  builtin-plugin-publishing-audit.md
docs/architecture/: ai.md
scripts/: write-webui-build-meta.py
tests/: conftest.py  db_helpers.py  test_access.py  test_adapter.py  test_adapter_resolver.py  test_bootstrap_steps.py  test_config.py  test_config_reload.py  test_db.py  test_dependency_graph.py  test_env.py  test_help.py  test_plugin.py  test_plugin_metadata.py  test_pypi.py  test_reflector.py  test_relay.py  test_render_config.py  test_repeater.py  test_resolver.py  test_restart.py  test_schema.py  test_session.py  test_store.py  test_trigger_reply.py  test_web.py  test_webchat.py
tests/access/: test_governance_repository.py  test_permission_service.py  test_webui_auth.py  test_webui_auth_split.py
tests/ai/: agent_turn_helpers.py  conftest.py  test_acp_registry.py  test_admin_model_split.py  test_admin_service_split.py  test_agent_factory.py  test_agent_integration.py  test_agent_registry.py  test_agent_stub.py  test_agent_turn_model_runtime.py  test_agent_turn_persistence_metadata.py  test_agent_turn_pipeline_integration.py  test_agent_turn_runtime.py  test_agent_turn_runtime_execution.py  test_agent_turn_usage_recording.py  test_ai_legacy_structure_cleanup.py  test_ai_management_route_mounting.py  test_ai_runtime_plugin_disablement.py  test_ai_session_management.py  test_ai_session_read_models.py  test_ai_session_routes.py  test_ai_session_runtime_integration.py  test_ai_token_usage_routes.py  test_ai_wiring.py  test_auxiliary_prompt_assembly.py  test_builtin_tool_catalog.py  test_capability_contracts.py  test_capability_policy_projection.py  test_conversation_sqlite.py  test_embedding_index.py  test_future_task_runtime_state.py  test_host_actions.py  test_knowledge_chunking.py  (+103 more)
web/: eslint.config.js  package.json  pnpm-lock.yaml
webui/: .prettierignore  design.md  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
webui-new/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts
(+1620 files in other folders)
