[project]
name = "apeiria_bot"
version = "0.1.0"
description = "A bot framework based on nonebot2"
readme = "README.md"
authors = [{ name = "iscccc", email = "me@iscccc.cc" }]
license = { text = "MIT" }
requires-python = ">=3.12, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot2[httpx]>=2.5.0",
    "nonebot2[websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pyyaml>=6.0.3",
    "click>=8.1.8",
    "watchfiles>=0.21.0",
    "httpx>=0.28.1",
    "nonebot-plugin-alconna>=0.61.1",
    "nonebot-plugin-uninfo>=0.11.0",
    "nonebot-plugin-htmlrender>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "pyjwt>=2.13.0",
]

[project.scripts]
apeiria = "apeiria.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apeiria"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.0.0,<5.0.0",
    "nonebug>=0.4.4",
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0",
    "pyright[nodejs]>=1.1",
]

[tool.nonebot]
plugin_dirs = [""]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "C90",   # mccabe
    "N",     # pep8-naming
    "PL",    # pylint
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "FAST", # FastAPI
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "FURB", # refurb
    "TRY",  # tryceratops
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "B008",  # function-call-in-default-argument
    "UP037", # quoted-annotation
    "ANN202",  # missing-return-type-private-function
    "ANN401",  # any-type
    "COM812",  # missing-trailing-comma
    "PLC0415", # import-outside-top-level
    "ASYNC240",  # Path operations in FastAPI endpoints
    "TC003",  # Path used at runtime in non-type-checking code
]
allowed-confusables = [
    "，",
    "。",
    "“",
    "”",
    "：",
    "；",
    "？",
    "！",
    "【",
    "】",
    "《",
    "》",
    "…",
    "—",
    "（",
    "）",
    "、",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "PLR2004"]
"alembic/versions/*" = ["ANN001", "ANN201", "ANN202"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["apeiria", "bot.py"]
extraPaths = ["."]
exclude = ["**/__pycache__", "**/.*", ".venv", ".apeiria", "data", "**/node_modules"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
norecursedirs = [".venv", ".apeiria", "data"]
